<resources>
	<string name="app_name">Family Tracker</string>
	<string name="terms_and_conditions"><u><![CDATA[By Signning up, you have agreed with our terms & conditions]]></u></string>
	<string name="continue_with_google">Continue with Google</string>
	<string name="getting_started">Getting Started…</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="first_name_hint">Enter your First Name</string>
	<string name="other_name_hint">Enter your Other Names</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="other">Other</string>
	<string name="dob_hint">Date of Birth(dd/MM/YYYY)</string>
	<string name="home_address_hint">Enter your Home Address</string>
	<string name="work_address_hint">Enter your Work Address(Optional)</string>
	<string name="mobile_number_hint">Enter your Mobile Number</string>
	<string name="update_details">Update Details</string>
	<string name="select_photo">select photo</string>
	<string name="avatar">Avatar</string>
	<string name="text_placeholder">Dummy Text Here</string>
	<string name="home">Home</string>
	<string name="add_new_contact">Add New Contact</string>
	<string name="save_contact">Save Contact</string>
	<string name="enter_full_name">Enter Full Name</string>
	<string name="enter_mobile_number">Enter Mobile Number</string>
	<string name="error_msg">Field cannot be Empty</string>
	<string name="error_msg_photo">Select a Photo</string>
	<string name="insurance_information">Insurance Information</string>
	<string name="insurance_company_name">Insurance Company Name</string>
	<string name="insurance_id_number">Insurance ID Number</string>
	<string name="state_allergy_here">State Allergy here</string>
	<string name="are_you_on_any_medication">Are you on any Medication?</string>
	<string name="diabetic">Diabetic ?</string>
	<string name="yes">YES</string>
	<string name="no">NO</string>
	<string name="state_medication_here">State Medication here</string>
	<string name="blood_pressure">Blood Pressure</string>
	<string name="are_you_allergic">Are you Allergic?</string>
	<string name="bleeder">Bleeder ?</string>
	<string name="organ_donor">Organ Donor ?</string>
	<string name="emergency_doctor">Emergency Doctor</string>
	<string name="add_contact">Add Contact</string>
	<string name="high">HIGH</string>
	<string name="normal">NORMAL</string>
	<string name="low">LOW</string>
	<string name="save_health_info">Save Health Details</string>
	<string name="enter_doctor_name">Enter Doctor Name</string>
	<string name="enter_doctor_number">Enter Doctor\'s Number</string>
	<string name="doctor_details">Doctor\'s Details</string>
	<string name="save_doctor_details">Save Doctor Details</string>
	<string name="blood_group">Blood Group</string>

	<string-array name="relation_array">
		<item>(SELECT RELATION)</item>
		<item>BROTHER</item>
		<item>SISTER</item>
		<item>MOTHER</item>
		<item>FATHER</item>
		<item>SON</item>
		<item>DAUGHTER</item>
		<item>AUNT</item>
		<item>UNCLE</item>
		<item>COUSIN</item>
		<item>GRANDMOTHER</item>
		<item>GRANDFATHER</item>
		<item>FRIEND</item>
	</string-array>


	<string-array name="blood_array">
		<item>(SELECT BLOOD GROUP)</item>
		<item>A+</item>
		<item>A-</item>
		<item>B+</item>
		<item>B-</item>
		<item>O+</item>
		<item>O-</item>
		<item>AB+</item>
		<item>AB-</item>
	</string-array>

	<string name="settings">Settings</string>
	<string name="allow_tracking">Allow Tracking</string>
	<string name="track_summary">Allow your location to be tracked</string>
	<string name="protect_data">Protect Personnal Information</string>
	<string name="protect_summary">set pin to protect your data</string>
	<string name="health">Health Details</string>
	<string name="tracking_activated">Tracking Enabled</string>
	<string name="tracking_deactivated">Tracking Disabled</string>
	<string name="pin_disabled">Pin has been Disabled</string>
	<string name="pin_enabled">Pin has been Enabled</string>
	<string name="report_bug">Send Feedback</string>
	<string name="report_summary">Report technical issues or suggest new features</string>
	<string name="share_app"><![CDATA[Share App with Friends & Family]]></string>
	<string name="privacy_title">Our Privacy Policy</string>
	<string name="terms_conditions"><![CDATA[Our Terms & Conditions]]></string>
	<string name="other_actions">Other Actions</string>
	<string name="actions">Actions</string>
	<string name="profile">Profile</string>
	<string name="my_profile">My Profile</string>
	<string name="my_map">My Map</string>
	<string name="mapbox_api" translatable="false">pk.eyJ1IjoicmVnbmV4IiwiYSI6ImNqaXVlb3dxejF5dXgzcXFtNW5naTh4YjgifQ.ETNFvMbm9leMY1dC4x0fCQ</string>
	<string name="user_location_permission_explanation">FamilyTracker required permission to be able to display your current location on the map and keep your location updated to your friends and family.</string>
	<string name="user_location_permission_not_granted">Location Permission is not G</string>
	<string name="tracker">User Tracker</string>
	<string name="call">Call</string>
	<string name="sms">SMS</string>
	<string name="logout">Logout</string>
	<string name="enter_digit_code">Enter 4 digit code</string>
	<string name="pin_code_desc">Set your App protection PIN code</string>
	<string name="enter_digit_code_repeat">Enter 4 digit code again.</string>
	<string name="submit">Set Pin</string>
	<string name="pref_track_key" translatable="false">track_key</string>
	<string name="pref_protect_key" translatable="false">protect_key</string>
	<string name="pref_report_key" translatable="false">report_key</string>
	<string name="pref_share_key" translatable="false">share_key</string>
	<string name="pref_privacy_key" translatable="false">privacy_key</string>
	<string name="pref_terms_key" translatable="false">terms_key</string>
	<string name="isAuthSet_key">isAuthSet</string>
	<string name="enter_your_passcode_to_continue">Enter your Passcode to continue…</string>
	<string name="validate">Validate</string>
	<string name="forgot_passcode">Forgot Passcode? Reset here.</string>
	<string name="in_case_of_emergency_contact">In case of Emergency</string>
	<string name="no_internet">No internet Connection.</string>
	<string name="couldnt_save">Couldn\'t Save Details</string>
	<string name="details_saved">Details Saved!!!</string>
	<string name="field_error">Please, Fill Empty Fields</string>
	<string name="edit_details">Update Details</string>
	<string name="doc_name">NAME:</string>
	<string name="doc_number">NUMBER:</string>
	<string name="lock">App_lock</string>
	<string name="photo_error">Couldn\'t upload Profile Photo.</string>
	<string name="contact_saved">Contact Saved!!!</string>
	<string name="contact_not_saved">Couldn\'t Save Contact</string>
	<string name="ok">OK</string>
	<string name="profile_dia_msg">Set up your Personal profile</string>
	<string name="contact_dia_msg">Are you sure you want to Delete this?</string>
	<string name="Yes">Yes</string>
	<string name="deleted">Deleted!</string>
	<string name="location_share_msg">Do you want to share Location with this contact?</string>
	<string name="loading">Loading…</string>
	<string name="sms_sent">Sms sent!</string>
	<string name="sms_not_sent">Couldn\'t sent sms online</string>
	<string name="full_name">FULL NAME:</string>
	<string name="dob">D.O.B:</string>
	<string name="home_profile">HOME:</string>
	<string name="work">WORK:</string>
	<string name="gender">GENDER:</string>
	<string name="mobile">MOBILE NUMBER:</string>
	<string name="cancel">Cancel</string>
	<string name="try_again">Try Again!</string>
	<string name="could_not_retrieve">Couldn\'t Retrieve your Details</string>
	<string name="want_to_logout">Do you want to Logout?</string>
	<string name="something_wrong">Something went wrong.</string>
	<string name="could_not_upload">Couldn\'t upload Profile Photo.</string>
	<string name="detail_saved">Details Saved!!!</string>
	<string name="detail_not_saved">Couldn\'t Save Details</string>
	<string name="email_subject">Report from Family Tracker App</string>
	<string name="email_details">Enter details here…</string>
	<string name="send_mail">Send mail…</string>
	<string name="no_client_installed">There are no email clients installed.</string>
	<string name="share_msg">Hi, check out this awesome App. you will love it!</string>
	<string name="share_subject">Awesome!!!</string>
	<string name="share_via">Share via…</string>
	<string name="pass_code_error">Passcode is wrong. Try again.</string>
	<string name="welcome">Welcome</string>
	<string name="health_dia_msg">Set up your Personal Health Information</string>
	<string name="could_not_get_health_info">Couldn\'t Retrieve your Health Details</string>
	<string name="donor">DONOR:</string>
	<string name="diabetic_desc">DIABETIC:</string>
	<string name="blood_group_desc">BLOOD GROUP:</string>
	<string name="blood_pressure_desc">BLOOD PRESSURE:</string>
	<string name="allergy_desc">ALLERGY:</string>
	<string name="allergy_info_desc">ALLERGY INFO. :</string>
	<string name="medication_desc">MEDICATION:</string>
	<string name="medication_info_desc">MEDICATION INFO. :</string>
	<string name="indurance_desc">INSURANCE COMPANY:</string>
	<string name="insurance_number_desc">INSURANCE NUMBER:</string>
	<string name="doctor_desc">DOCTOR:</string>
	<string name="could_not_get_health_detail">Couldn\'t Retrieve your Health Details</string>
	<string name="want_to_exit">Are you sure you want to exit?</string>
	<string name="pin_error">Pin do not match.</string>
	<string name="calling">calling</string>
	<string name="location_error">User Location not found!</string>
</resources>
