<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="@dimen/dp_16"
	android:fadeScrollbars="true"
	android:orientation="vertical"
	android:scrollbars="none"
	android:id="@+id/healthLayoutMain"
	tools:context=".ui.HealthActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:id="@+id/layoutDiabetic"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center_vertical">

			<TextView
				android:id="@+id/txtDiabetic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/dp_10"
				android:text="@string/diabetic" />

			<RadioGroup
				android:id="@+id/diabeticRadioGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/diabeticYes"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/yes" />

				<RadioButton
					android:id="@+id/diabeticNo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/no" />

			</RadioGroup>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layoutMedication"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center_vertical">

			<TextView
				android:id="@+id/txtMedication"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/dp_10"
				android:text="@string/are_you_on_any_medication" />

			<RadioGroup
				android:id="@+id/medicationRadioGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/medicationYes"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/yes" />

				<RadioButton
					android:id="@+id/medicationNo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/no" />

			</RadioGroup>

		</LinearLayout>

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edtMedication"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:background="@drawable/edit_text_outline"
			android:hint="@string/state_medication_here"
			android:inputType="textMultiLine|textCapSentences"
			android:lines="2"
			android:padding="@dimen/dp_10"
			android:visibility="gone" />


		<LinearLayout
			android:id="@+id/layoutAllergy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center_vertical">

			<TextView
				android:id="@+id/txtAllergy"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/are_you_allergic" />

			<RadioGroup
				android:id="@+id/allergicRadioGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/allergyYes"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/yes" />

				<RadioButton
					android:id="@+id/allergyNo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/no" />

			</RadioGroup>
		</LinearLayout>

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edtAllergy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:background="@drawable/edit_text_outline"
			android:hint="@string/state_allergy_here"
			android:inputType="textMultiLine|textCapSentences"
			android:lines="2"
			android:padding="@dimen/dp_10"
			android:visibility="gone" />

		<LinearLayout
			android:id="@+id/relativePressure"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center_vertical">

			<TextView
				android:id="@+id/txtBloodPressure"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/dp_5"
				android:text="@string/blood_pressure" />

			<RadioGroup
				android:id="@+id/pressureRadioGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/pressureHigh"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/high" />

				<RadioButton
					android:id="@+id/pressureNormal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/normal" />

				<RadioButton
					android:id="@+id/pressureLow"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/low" />
			</RadioGroup>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layoutBleeder"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center_vertical">

			<TextView
				android:id="@+id/txtBleeder"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/dp_10"
				android:text="@string/bleeder" />

			<RadioGroup
				android:id="@+id/bleederRadioGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/bleederYes"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/yes" />

				<RadioButton
					android:id="@+id/bleederNo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/dp_5"
					android:text="@string/no" />

			</RadioGroup>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layoutOrganDonor"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center_vertical">


			<TextView
				android:id="@+id/txtOrganDonor"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/dp_10"
				android:text="@string/organ_donor" />

			<RadioGroup
				android:id="@+id/donorRadioGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/organDonorYes"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="5dp"
					android:text="@string/yes" />

				<RadioButton
					android:id="@+id/organDonorNo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="5dp"
					android:text="@string/no" />

			</RadioGroup>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/txtEmergency"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/dp_10"
				android:text="@string/emergency_doctor" />

			<Button
				android:id="@+id/btnAddContact"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/dp_25"
				android:background="@drawable/edit_text_outline"
				android:padding="@dimen/dp_5"
				android:text="@string/add_contact"
				android:textColor="@color/colorPrimary"
				android:textSize="12sp" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layoutContact"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:orientation="vertical"
			android:visibility="gone">

			<TextView
				android:id="@+id/txtContactName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:text="@string/text_placeholder" />

			<TextView
				android:id="@+id/txtContactNumber"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dp_5"
				tools:text="@string/text_placeholder" />

		</LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_15"
			android:background="@android:color/darker_gray"
			android:text="@string/insurance_information"
			android:textAlignment="center"
			android:textColor="@android:color/white" />

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edtCompanyName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:background="@drawable/edit_text_outline"
			android:hint="@string/insurance_company_name"
			android:inputType="textCapSentences"
			android:padding="@dimen/dp_10" />

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/insuranceId"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:layout_marginBottom="@dimen/dp_10"
			android:background="@drawable/edit_text_outline"
			android:hint="@string/insurance_id_number"
			android:inputType="textCapSentences"
			android:padding="@dimen/dp_10" />

		<ProgressBar
			android:id="@+id/progressBar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:visibility="gone" />

		<Button
			android:id="@+id/btnSaveHealth"
			style="@style/Theme.AppCompat.Light"
			android:layout_width="match_parent"
			android:layout_height="@dimen/dp_45"
			android:layout_marginBottom="@dimen/dp_15"
			android:background="@color/colorAccent"
			android:text="@string/save_health_info"
			android:textColor="@color/colorWhite" />
	</LinearLayout>
</ScrollView>