<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="@dimen/dp_16"
	android:orientation="vertical"
	tools:context=".dialogFragment.ContactDialogFragment">


	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/add_new_contact"
		android:textAppearance="?textAppearanceHeadline6"
		android:textSize="18sp" />

	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_2"
		android:layout_margin="@dimen/dp_8"
		android:background="@color/colorBlack" />

	<de.hdodenhof.circleimageview.CircleImageView
		android:id="@+id/imgContactProfile"
		android:layout_width="@dimen/dp_80"
		android:layout_height="@dimen/dp_80"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/dp_8"
		android:layout_marginBottom="@dimen/dp_5"
		android:gravity="center_horizontal"
		android:src="@drawable/ic_person"
		app:civ_border_color="#FF000000"
		app:civ_border_width="1dp" />

	<TextView
		android:id="@+id/txtSelectPhoto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="@dimen/dp_15"
		android:text="@string/select_photo"
		android:textColor="@color/colorAccent" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/edtContactName"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_45"
		android:layout_marginBottom="@dimen/dp_10"
		android:background="@drawable/edit_text_outline"
		android:hint="@string/enter_full_name"
		android:padding="@dimen/dp_10" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/edtContactNumber"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_45"
		android:layout_marginBottom="@dimen/dp_10"
		android:background="@drawable/edit_text_outline"
		android:hint="@string/enter_mobile_number"
		android:padding="@dimen/dp_10" />

	<Spinner
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_45"
		android:layout_marginBottom="@dimen/dp_15"
		android:background="@drawable/edit_text_outline"
		android:padding="@dimen/dp_10" />

	<Button
		android:id="@+id/btnSaveContact"
		style="@style/Theme.AppCompat.Light"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_45"
		android:layout_marginBottom="@dimen/dp_15"
		android:background="@color/colorAccent"
		android:text="@string/save_contact"
		android:textColor="@color/colorWhite" />

</LinearLayout>
